<resources>
    <string name="app_name">Agenda_Online</string>
    <!--MAIN ACTIVITY-->
    <string name="Btn_Login">Login</string>
    <string name="Btn_Registro">Registro</string>

    <!--REGISTRO ACTIVITY-->
    <string name="CrearCuentaTXT">Crear una cuenta</string>
    <string name="NombreEt">Nombres</string>
    <string name="CorreoEt">Correo Electronico</string>
    <string name="ContraseñaEt">Contraseña</string>
    <string name="ConfirmarContraseñaEt">Confirmar Contraseña</string>
    <string name="RegistrarUsuario">Registrar</string>
    <string name="TengounacuentaTXT">Tengo una cuenta</string>

    <!--LOGIN ACTIVITY-->
    <string name="LoginTXT">Iniciar Sesión</string>
    <string name="LoginUsuario">Iniciar Sesión</string>
    <string name="NoTengounacuentaTXT">¿No tienes una cuenta? Regístrate</string>

    <!--MENU PRINCIPAL-->
    <string name="MenuPrincipalTXT">Menu Principal</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
    <string name="Bienvenido">Bienvenido(a)</string>
    <string name="NombresPrincipal"> -- </string>
    <string name="CorreoPrincipal"> -- </string>

    <!--AGREGAR NOTA-->
    <string name="Uid_Usuario">Uid del usuario</string>
    <string name="Correo_usuario">Correo de usuario</string>
    <string name="Fecha_hora_actual">Fecha y hora actual</string>
    <string name="Titulo">Titulo</string>
    <string name="Descripcion">Descripción</string>
    <string name="Btn_Calendario">Calendario</string>
    <string name="Fecha">00/00/0000</string>
    <string name="Estado">No finalizado</string>

    <string name="No_Verificado">No Verificado</string>
    <string name="Fecha_de_registro">Fecha de Registro</string>
    <string name="No_finalizado">No Finalizado</string>
    <string name="select_gender_prompt">Seleccionar Género</string>
    <string name="select_gender">Seleccionar Género</string>
    <string name="avatar_image"> Image </string>


</resources>