<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarNota">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/fechaRegistroLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Fecha_de_registro"
        android:fontFamily="@font/oswald"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/fechaRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="24-05-2022/07:07:06 a. m."
        android:fontFamily="@font/oswald"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/fechaRegistroLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tituloInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/fechaRegistro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tituloEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Titulo"
            android:fontFamily="@font/oswald"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descripcionInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tituloInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripcionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Descripcion"
            android:fontFamily="@font/oswald"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/calendarioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Btn_Calendario"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        android:fontFamily="@font/oswald"
        app:layout_constraintTop_toBottomOf="@id/descripcionInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:drawableStart="@drawable/id_calendar"
        android:drawablePadding="8dp"/>

    <TextView
        android:id="@+id/fechaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="00/00/0000"
        android:fontFamily="@font/oswald"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/descripcionInputLayout"
        app:layout_constraintStart_toEndOf="@id/calendarioButton"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <TextView
        android:id="@+id/estadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/No_finalizado"
        android:fontFamily="@font/oswald"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/calendarioButton"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

    <Button
        android:id="@+id/guardarTareaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Guardar Tarea"
        android:textAllCaps="false"
        android:backgroundTint="@color/teal_700"
        android:textColor="@android:color/white"
        android:fontFamily="@font/oswald"
        app:layout_constraintTop_toBottomOf="@id/estadoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
